[package]
name = "gpui_markdown_preview"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/markdown_preview/mod.rs"

[features]
test-support = []


[dependencies]
anyhow = "1.0.89"
async-recursion = "1.0.0"
collections = { git = "https://github.com/zed-industries/zed" }
editor = { git = "https://github.com/zed-industries/zed" }
gpui = { git = "https://github.com/zed-industries/zed" }
language = { git = "https://github.com/zed-industries/zed" }
linkify = "0.10.0"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
pretty_assertions = "1.3.0"
pulldown-cmark = { version = "0.12.0", default-features = false }
settings = { git = "https://github.com/zed-industries/zed" }
theme = { git = "https://github.com/zed-industries/zed" }
ui = { git = "https://github.com/zed-industries/zed" }
# workspace = { git = "https://github.com/zed-industries/zed" }
util = { git = "https://github.com/zed-industries/zed" }

serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = { version = "1.0", features = ["deserialize_in_place"] }
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }
serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value",
] }

# [dev-dependencies]
# editor = { git = "https://github.com/zed-industries/zed", features = ["test-support"] }
